argo/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world
spec:
  replicas: 2
  selector:
      matchLabels:
        app: hello-world
  template:
    metadata:
      labels:
        app: hello-world
        # version: "v1"
    spec:
      containers: 
        - name: hello-world
          # image: acrgreenbluedeployment.azurecr.io/hello-world-nginx:$(version)
          image: acrgreenbluedeployment.azurecr.io/hello-world-nginx:v1
          ports:
            - name: http
              containerPort: 80
          resources:
            requests:
              cpu: 200m
              memory: 200Mi
            limits:
              cpu: 500m
              memory: 500Mi
