argo/service-preview.yaml
kind: Service
apiVersion: v1
metadata:
  name:  hello-world-svc-preview
spec:
  selector:
    app:  hello-world
  type:  ClusterIP
  ports:
  - name:  http
    port:  80
    targetPort:  80
